data storage function

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 .btn {
     font-size: 22px;
-    background-color: aqua;
+    background-color: rgb(0, 26, 255);
 }
 .border {
     margin: 25px 0 0 0;
