--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,16 @@
 .card {
     display: inline-block;
     font-size: 16px;
+    margin: 0 10px 0 10px;
+    width: 15%;
 }
 .forecast {
     margin-left: 365px;
+    padding: 0;
 }
 .submit {
     width: 100%;
-    padding: .375rem .75rem;
+    padding: 1rem 5rem;
     font-size: 1rem;
     line-height: 1.5;
     color: #495057;
@@ -33,4 +36,8 @@
     border: 1px solid #ced4da;
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.content {
+    margin: auto;
+    display: flex;
 }
