--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@
     padding: 0;
 }
 .submit {
-    width: 100%;
-    padding: 1rem 5rem;
+    width: 65%;
+    padding: .5rem 5rem;
     font-size: 1rem;
     line-height: 1.5;
     color: #495057;
